fix: feature removed extra space from top

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -377,10 +377,12 @@ header .navbar .nav-btn--sm {
 .feature {
   padding: 90px 0px;
   position: relative;
+  padding-top: 0px;
 }
 
 @media (max-width: 991px) {
   .feature {
+    padding-top: 60px;
     padding-bottom: 0px;
   }
 }
